<resources>
    <string name="app_name">Quizz_App_Upgrade</string>
    <string name="email">Write your email…</string>
    <string name="password">write your password…</string>
    <string name="welcome_to_quizzapp">Welcome to QuizzApp!</string>
    <string name="Do_login_butt">Login me</string>
    <string name="To_login_butt">To Login</string>
    <string name="Do_registration_butt">Register me</string>
    <string name="To_registration_butt">To Registration</string>
    <string name="button_reg">Register me</string>
    <string name="registration_button">Registration</string>
    <string name="Main_menu_textView">Now You are logged in! Select what do You want to do. </string>
    <string name="main_menu_to_do_quiz">Take quiz</string>
    <string name="main_menu_to_make_quiz">Make quiz</string>
    <string name="Log_out">Log out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="nickname">Write your nickname…</string>
    <string name="welcome_text">QuizzApp, as the name suggests, is for solving quizzes. However, it gives much wider possibilities: you can not only solve them, but also create and compete with other users. Register and check now!</string>
    <string name="title_activity_quizz_panel">QuizzPanel</string>
    <!-- Strings used for fragments for navigation -->
</resources>