<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="91dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="87dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="171dp"
            android:layout_height="22dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="197dp"
            android:text="@string/welcome_to_quizzapp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="145dp"
            android:layout_height="82dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="36dp"
            android:text="@string/To_login_butt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="154dp"
            android:layout_height="80dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="36dp"
            android:text="@string/To_registration_butt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/Login_email"
            android:layout_width="254dp"
            android:layout_height="72dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="279dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="254dp"
            android:layout_height="72dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="395dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>