<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="91dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="87dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="312dp"
            android:layout_height="99dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="52dp"
            android:text="@string/welcome_to_quizzapp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/To_login_butt"
            android:layout_width="145dp"
            android:layout_height="82dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="36dp"
            android:text="@string/To_login_butt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/To_registration_butt"
            android:layout_width="154dp"
            android:layout_height="80dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="36dp"
            android:text="@string/To_registration_butt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="313dp"
            android:layout_height="401dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="148dp"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>